 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####      Quake Army Knife 6.6 Changelog


6.6.0 Beta 7
============
* [DanielPharos]: Read and write support for the id-specific for solids and faces in .vmf files.

* [DanielPharos]: Updated all addons to use "trigger" texture for trigger entities by default.

* [DanielPharos]: Fixed solid color mode not working in Software and Glide renderers.

* [DanielPharos]: Provide a new setting for the software renderer to limit the maximum
          - resolution at which it renders. This used to be the case, but this code was broken
          - in the past, and contained underflow errors leading to renderer crashes.

* [DanielPharos]: Added HL1 Ricochet addon.

* [DanielPharos]: Many fixes to Python object handling to reduce reference counting errors.

* [DanielPharos]: Improvements to .rmf file loading: many more things are now loading properly,
          - including groups, entities with brushes, and the origin of entities.

* [DanielPharos]: Added .rmf file UV texture coordinate loading.

* [DanielPharos]: Fixed a bug causing access violations when trying to load textures from
          - Quake 1 or Hexen 2 when the corresponding .bsp file hadn't been loaded yet.

* [DanielPharos]: Added ambient lighting support to Direct3D renderer.

* [DanielPharos]: Added trilinear texture filtering to Glide renderer.

* [DanielPharos]: Set a more sensible minimum render distance. This should reduce Z-buffer
          - fighting in OpenGL and Direct3D.

* [DanielPharos]: Added workaround for OpenGL implementations that cause floating point
          - exceptions to be raised during rendering.

* [DanielPharos]: Rewrote the Intel precision assembly code to only change the precision,