@@ -14,6 +14,9 @@
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Prevent hotkeys from triggering functions when the corresponding menu item
+          - is disabled.
+
 * [DanielPharos]: Read and write support for the id-specific for solids and faces in .vmf files.
 
 * [DanielPharos]: Updated all addons to use "trigger" texture for trigger entities by default.
